--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>flutter_website</title>
+  <title>Josef Wilhelm</title>
 </head>
 <body>
   <script src="main.dart.js" type="application/javascript"></script>
